--- a/hyphoto/daily.html
+++ b/hyphoto/daily.html
@@ -30,6 +30,69 @@
         <!-- Main -->
         <div id="main">
             <article class="thumb">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/mcb1.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/mcb1.jpg" alt="">
+                </a>
+                <h2>Frozen Voice</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/mcb2.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/mcb2.jpg" alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/mcb3.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/mcb3.jpg" alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/mcb4.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/mcb4.jpg" alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/vivian.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/vivian.jpg" alt="">
+                </a>
+                <h2>@UIUC Main Lib</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/zihan.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/zihan.jpg" alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/sparklers1.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/sparklers1.jpg" alt="">
+                </a>
+                <h2>Sparkler</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/sparklers2.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/sparklers2.jpg" alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/sparklers3.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/sparklers3.jpg" alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
                 <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/trace.jpg" class="image">
                     <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/daily/trace.jpg" alt="">
                 </a>
