--- a/hyphoto/cosplay.html
+++ b/hyphoto/cosplay.html
@@ -29,6 +29,48 @@
         <!-- Main -->
         <div id="main">
             <article class="thumb">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/chocolat1.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/chocolat1.jpg" alt="">
+                </a>
+                <h2>Chocolat - Nekopara by 羽潇</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/chocolat2.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/chocolat2.jpg" alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/chocolat3.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/chocolat3.jpg" alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/zhendejk1.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/zhendejk1.jpg" alt="">
+                </a>
+                <h2>Alter - Fate/Grand Order by 大甜</h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/zhendejk2.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/zhendejk2.jpg" alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
+                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/zhendejk3.jpg" class="image">
+                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/zhendejk3.jpg" alt="">
+                </a>
+                <h2></h2>
+                <p>
+            </article>
+            <article class="thumb">
                 <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/bilibili.jpg" class="image">
                     <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/bilibili.jpg" alt="">
                 </a>
@@ -64,29 +106,8 @@
                 <p>
             </article>
             <article class="thumb">
-                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda3-min.jpg" class="image">
-                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda3-min.jpg" alt="">
-                </a>
-                <h2></h2>
-                <p>
-            </article>
-            <article class="thumb">
                 <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda4-min.jpg" class="image">
                     <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda4-min.jpg" alt="">
-                </a>
-                <h2></h2>
-                <p>
-            </article>
-            <article class="thumb">
-                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda5-min.jpg" class="image">
-                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda5-min.jpg" alt="">
-                </a>
-                <h2></h2>
-                <p>
-            </article>
-            <article class="thumb">
-                <a href="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda6-min.jpg" class="image">
-                    <img src="https://frankiehkoss.oss-cn-hongkong.aliyuncs.com/photo/cosplay/kda6-min.jpg" alt="">
                 </a>
                 <h2></h2>
                 <p>
